--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.26",
-    "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.22",
     "@types/sass": "^1.43.1",
@@ -25,6 +24,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
+    "redux-form": "^8.3.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
     "sass": "^1.49.9",
@@ -61,7 +61,9 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^17.0.44",
     "@types/react-router-dom": "^5.3.3",
+    "@types/redux-form": "^8.3.3",
     "@types/redux-logger": "^3.0.9"
   }
 }
