--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/react": "^17.0.44",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux-form": "^8.3.3",
-    "@types/redux-logger": "^3.0.9"
+    "@types/redux-logger": "^3.0.9",
+    "gh-pages": "^3.2.3"
   }
 }
