--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "movies",
   "version": "0.1.0",
+  "homepage": "https://aramadiaz.github.io/movies_browser",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -36,7 +37,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
