--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "movies",
   "version": "0.1.0",
-  "homepage": "https://aramadiaz.github.io/movies_browser",
+  "homepage": "https://aramadiaz.github.io/movies_browser/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.7.1",
